objects/OPP_ProjectSpecificInformation__c.object
<CustomObject>
    <fields>
        <fullName>BiddingEPC__c</fullName>
        <label>Bidding EPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LSTK</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>DI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndUsertoEPCAwardDate__c</fullName>
        <label>End-User to EPC Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GMPGates__c</fullName>
        <label>GMP Gates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Go No Go decision</fullName>
                </value>
                <value>
                    <fullName>Deal Winning Session 1</fullName>
                </value>
                <value>
                    <fullName>Bid No Bid</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>Deal Winning Session 2</fullName>
                </value>
                <value>
                    <fullName>CQA approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GlobalMajorProjects__c</fullName>
        <label>Global Major Projects</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GMP: Major Project handled by GMP team</fullName>
                </value>
                <value>
                    <fullName>GMP S: Major Project supported by GMP team</fullName>
                </value>
                <value>
                    <fullName>GMP CAN: Candidate Major Project to be evaluated</fullName>
                </value>
                <value>
                    <fullName>Regional MP: Major Project regionally handled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeyRisks__c</fullName>
        <label>Key risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Licensor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Provides licenses to Invensys projects</inlineHelpText>
        <label>Licensor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master Project Specific Informations (Licensor)</relationshipLabel>
        <relationshipName>ProjectSpecificInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MainAutomationContractor__c</fullName>
        <label>MAC-Main Automation Contractor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MajorPursuitLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Pursuit Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MasterProjectSpecificInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterProject__c</fullName>
        <label>Master Project</label>
        <referenceTo>OPP_Project__c</referenceTo>
        <relationshipLabel>Master Project Specific Information</relationshipLabel>
        <relationshipName>MasterProjectSpecificInformations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NextActions__c</fullName>
        <label>Next Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAEstimatedPursuitvalueUSD__c</fullName>
        <label>PA Estimated Pursuit value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectManagementContractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Management Contractor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master Project Specific Informations (Project Management Contractor)</relationshipLabel>
        <relationshipName>ProjectSpecificInformations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectSpecInfVIPIcon__c</fullName>
        <formula>MasterProject__r.ProjectEndUserInvestor__r.Account_VIPIcon__c</formula>
        <label>&lt;VIPIcon&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PursuitPhase__c</fullName>
        <label>Pursuit Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-Lead (pre-funding)</fullName>
                </value>
                <value>
                    <fullName>1-Feed</fullName>
                </value>
                <value>
                    <fullName>2-EPC Selection</fullName>
                </value>
                <value>
                    <fullName>3-EPC Awarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PursuitProbability__c</fullName>
        <label>Pursuit Probability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusRemarks__c</fullName>
        <label>Status / Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Master Project Specific Information</label>
    <nameField>
        <displayFormat>MPSI-{0000}</displayFormat>
        <label>Master Project Specific Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Project Specific Informations</pluralLabel>
    <recordTypes>
        <fullName>IndustryProcessAutomation</fullName>
        <active>true</active>
        <label>Industry - Process Automation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MPSI_VR_OCT15SLS01_SingleRecForPrj</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; 
IF(ISNEW() &amp;&amp; RecordTypeId = &apos;01212000000zskl&apos; &amp;&amp;    MasterProject__r.IndustryPSICount__c&gt;=1,true,false
)</errorConditionFormula>
        <errorMessage>You cannot create more than one record under the Master Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_VR_MAR16SLS01_AccessToCertainFields</fullName>
        <active>true</active>
        <description>Reference from BSI_VR_OCT14SLS01_AccessToCertainFields VR</description>
        <errorConditionFormula>NOT($User.BypassVR__c)
&amp;&amp;
(
	AND(
		OR(
			ISBLANK($User.Permission_sets_assigned__c), 
			NOT(CONTAINS($User.Permission_sets_assigned__c, &quot;SA - InvensysGlobalMajorProjectsTeam&quot;))
		), 
		OR(
			ISCHANGED(Licensor__c), 
			ISCHANGED(ProjectManagementContractor__c), 
			ISCHANGED(PursuitPhase__c), 
			ISCHANGED(EndUsertoEPCAwardDate__c),
			ISCHANGED(Comments__c),
			ISCHANGED(ContractType__c),
			ISCHANGED(GlobalMajorProjects__c),
			ISCHANGED(GMPGates__c),
			ISCHANGED(KeyRisks__c),
			ISCHANGED(MainAutomationContractor__c),
			ISCHANGED(NextActions__c),
			ISCHANGED(StatusRemarks__c),
			ISCHANGED(MasterProject__c)
		),
		NOT(ISPICKVAL(GlobalMajorProjects__c, &apos;Regional MP: Major Project regionally handled&apos;)),
		NOT(ISPICKVAL(GlobalMajorProjects__c, &apos;&apos;))	
	) 
)</errorConditionFormula>
        <errorMessage>You do not have appropriate permission to modify this Master Project Specific Information.</errorMessage>
    </validationRules>
</CustomObject>